tests/machine/x/java/map_assign.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsmap_assign2339127485/001/MapAssign.java:21: error: cannot find symbol
    scores.bob = 2;
          ^
  symbol:   variable bob
  location: variable scores of type Alice
/tmp/TestCompileValidProgramsmap_assign2339127485/001/MapAssign.java:22: error: cannot find symbol
    System.out.println(scores.bob);
                             ^
  symbol:   variable bob
  location: variable scores of type Alice
2 errors


  1| var scores = {"alice": 1}
  2| scores["bob"] = 2